--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- cabeçalho principal -->
     <header>
         <h1 id="apresentação">MARCA DO CLIENTE</h1>
-        <img src="image.png" alt="foto de perfil, Pamela Amorim" id="minha-img">
+        <img src="img-sem-ft.jpg" alt="" id="minha-img">
 
         <div class="img-fundo-header"></div>
     </header>
