--- a/projeto.html
+++ b/projeto.html
@@ -27,27 +27,27 @@
         <section id="grid">
 
             <div class="bloco1">
-                <p class="todosblocos"><a href="https://pamelaamo.github.io/calculadora/" id="cal">CALCULADORA</a></p>
+                <p class="todosblocos"><a href="" id="cal">PENDENTE</a></p>
             </div>
 
             <div class="bloco2">
-                <p class="todosblocos"><a href="https://pamelaamo.github.io/login/" id="log">LOGIN</a></p>
+                <p class="todosblocos"><a href="" id="log">PENDENTE</a></p>
             </div>
 
             <div class="bloco3">
-                <p class="todosblocos">EM BREVE</p>
+                <p class="todosblocos">PENDENTE</p>
             </div>
 
             <div class="bloco4">
-                <p class="todosblocos">EM BREVE</p>
+                <p class="todosblocos">PENDENTE</p>
             </div>
 
             <div class="bloco5">
-                <p class="todosblocos">EM BREVE</p>
+                <p class="todosblocos">PENDENTE</p>
             </div>
 
             <div class="bloco6">
-                <p class="todosblocos">EM BREVE</p>
+                <p class="todosblocos">PENDENTE</p>
             </div>
 
         </section>
