incluindo img na nova janela - contato

--- a/contato.html
+++ b/contato.html
@@ -28,7 +28,7 @@
 
                 <img src="e-mail.png" alt="icone de e-mail" id="email">
 
-                <p class="e-mail"> E-mail: <br> pamelaamolivra08@hotmail.com</p>
+                <p class="e-mail"> E-mail: <br> Lorem ipsum dolor sit </p>
 
             </div>
     
@@ -36,7 +36,7 @@
 
                 <img src="cel.png" alt="icone de celular" id="cel">
 
-                <p class="celular">(13)98865-0154</p>
+                <p class="celular">(00)00000-0000</p>
 
             </div>
 
@@ -46,7 +46,7 @@
 
                 <p>
                     <p class="clique-git">
-                        <a href="https://github.com/Pamelaamo" target="_blank">Clique aqui e acesse meu perfil do GitHub</a>
+                        <a href="https://github.com/Pamelaamo" target="_blank">Lorem ipsum dolor sit</a>
                     </p>
                 </p>
 
@@ -59,7 +59,7 @@
 
                 <p>
                     <p class="clique-linke">
-                        <a href="https://www.linkedin.com/in/pamelaamorim08/" target="_blank">Clique aqui e acesse meu perfil do Linkedin</a>
+                        <a href="" target="_blank">Lorem ipsum dolor sit</a>
                     </p>
                 </p>
 
