removendo link pessoal

--- a/contato.html
+++ b/contato.html
@@ -46,7 +46,7 @@
 
                 <p>
                     <p class="clique-git">
-                        <a href="https://github.com/Pamelaamo" target="_blank">Lorem ipsum dolor sit</a>
+                        <a href="" target="_blank">Lorem ipsum dolor sit</a>
                     </p>
                 </p>
 
